--- a/src/index.html
+++ b/src/index.html
@@ -301,7 +301,7 @@
           <img class="item-product-img" loading="lazy" src="./img/cookies_sweets/hallowenCookies.jpeg" alt="Galletas con motivo de Halloween" />
           <div class="item-name">Galletas de Halloween</div>
           <div class="item-buy-button">
-            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cookiesBtn3" title="Cupcake Velvet">¡Los quiero!</a>
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cookiesBtn3" title="Galletas de Halloween">¡Las quiero!</a>
           </div>
         </div>
         <!-- ITEM 4 -->
@@ -321,10 +321,10 @@
             />
             <img src="./img/gluten-free-icon.svg" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" tabindex="0" data-bs-trigger="focus" data-bs-html="true" data-bs-content="Opción sin gluten" />
           </div>
-          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcakes-colores-1.jpeg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcakes-colores-1.jpeg" alt="Imagen de cupcakes de colores" />
           <div class="item-name">Cupcakes de colores 🌈</div>
           <div class="item-buy-button">
-            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cookiesBtn4" title="Cupcake Fresa">¡Los quiero!</a>
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cookiesBtn4" title="Cupcake de colores">¡Los quiero!</a>
           </div>
         </div>
         <!-- ITEM 5 -->
@@ -338,16 +338,14 @@
               tabindex="0"
               data-bs-trigger="focus"
               data-bs-html="true"
-              data-bs-content="Con una textura crujiente por fuera y suave por dentro, están repletas de trozos generosos de chocolate que se derriten deliciosamente. 
-              <br>Perfectas para cualquier ocasión, estas galletas combinan el sabor intenso del cacao con el dulzor justo, ofreciendo una experiencia de galleta 
-              casera que encantará a todos. <br><br>¡Un imprescindible para los amantes del chocolate!"
+              data-bs-content="Delicados y coloridos, estos macarons personalizados combinan sabor y estilo en cada bocado. Preparados artesanalmente y decorados a medida, son el detalle perfecto para cualquier ocasión especial. Disfruta de su suavidad y sabor único, con diseños únicos para sorprender a todos."
             />
             <img src="./img/gluten-free-icon.svg" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" tabindex="0" data-bs-trigger="focus" data-bs-html="true" data-bs-content="Opción sin gluten" />
           </div>
-          <img class="item-product-img" loading="lazy" src="./img/cookies_sweets/cookies01.jpeg" alt="Imagen de cookies clásicas de chocolate" />
-          <div class="item-name">Cookies de chocolate</div>
+          <img class="item-product-img" loading="lazy" src="./img/cookies_sweets/macarons-flores.jpeg" alt="Imagen de Macaroons con motivo floral" />
+          <div class="item-name">Macaroons con motivo</div>
           <div class="item-buy-button">
-            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cookiesBtn1" title="Cookies clásicas de chocolate">¡Las quiero!</a>
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cookiesBtn5" title="Macaroons con motivo">¡Los quiero!</a>
           </div>
         </div>
       </div>
@@ -371,9 +369,11 @@
                     <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcakes-colores-1.jpeg" />
                   </div>
                   <div class="news-text">
-                    ¡Celebra el orgullo con nuestros vibrantes cupcakes de colores! <br /><br />Cada cupcake está cuidadosamente horneado con una base esponjosa y decorado con un delicioso frosting de mantequilla, teñido en los colores del arco iris. Estos
-                    cupcakes no solo son una delicia para el paladar, sino también una explosión de alegría visual, perfectos para cualquier evento del Orgullo LGBTQ+. <br /><br />Con su sabor irresistible y su aspecto festivo, son ideales para compartir
-                    con amigos y seres queridos. Además, cada compra apoya la inclusión y la diversidad. <br /><br />¡Haz de tu celebración del orgullo un evento aún más especial con nuestros cupcakes coloridos!
+                    Estos cupcakes de colores son el detalle perfecto para agregar alegría y sabor a cualquier ocasión especial. Con una base esponjosa y sabores cuidadosamente seleccionados, cada cupcake está decorado en tonos vibrantes que capturan la
+                    esencia de la celebración. Ya sea para un cumpleaños, una fiesta temática, o simplemente para disfrutar de algo dulce y especial, estos cupcakes están diseñados para encantar a todos. <br /><br />Además de su apariencia llamativa, los
+                    cupcakes se pueden personalizar en una variedad de sabores y colores según tus preferencias, permitiéndote crear combinaciones únicas que se adapten a cualquier evento. <br /><br />La suave textura de la masa y el glaseado decorado en
+                    colores vivos hacen que cada bocado sea una experiencia deliciosa y memorable. <br />Estos cupcakes son ideales tanto para compartir como para regalar, aportando un toque de color y dulzura que iluminará cualquier mesa. Cada uno está
+                    hecho con dedicación y cuidado, ofreciendo una explosión de color y sabor que hará que todos quieran repetir.
                   </div>
                 </div>
               </div>
