Agregada sección información

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
           <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-flores-madres.jpeg" alt="Tarta artesana para el día de la madre. Con nata montada, tonos rosas y flores naturales" />
           <div class="item-name">Tarta Floral</div>
           <div class="item-buy-button">
-            <a href="./html/tartafloral.html" class="btn btn-primary buy-btn" id="" title="Tarta Floral">¡La quiero!</a>
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn1" title="Tarta Floral">¡La quiero!</a>
           </div>
         </div>
         <!-- ITEM 2 -->
@@ -443,7 +443,43 @@
       </div>
       <div class="container-fluid information">
         <div class="info-text-container">
-          <p>Aquí se incluirá toda la información relativa a pedidos, pedidos mínimos, gastos, etc.</p>
+          <p><b>Tabla de porciones y precios</b></p>
+          <table>
+            <thead>
+              <tr>
+                <th>Moldes</th>
+                <th>Porciones</th>
+                <th>Precios</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>10 cm</td>
+                <td>10</td>
+                <td>Desde 45€</td>
+              </tr>
+              <tr>
+                <td>18 cm</td>
+                <td>15</td>
+                <td>Desde 45€</td>
+              </tr>
+              <tr>
+                <td>20 cm</td>
+                <td>20</td>
+                <td>Desde 55€</td>
+              </tr>
+              <tr>
+                <td>25 cm</td>
+                <td>30</td>
+                <td>Desde 65€</td>
+              </tr>
+            </tbody>
+          </table>
+          <p><b>Consultar para otros tamaños</b></p>
+          <p>Galletas personalizadas desde 1.50€ ud.</p>
+          <p>Cupcakes personalizados desde 0.95€ ud.</p>
+          <p>Macarrons desde 1.25€ ud.</p>
+          <h3><b>Pedido mínimo de 6 ud.</h3>
         </div>
         <!-- WAVES INFERIORES -->
         <div class="custom-shape-divider-top-1718731153 bottom-waves">
