--- a/src/index.html
+++ b/src/index.html
@@ -479,7 +479,7 @@
           <p>Galletas personalizadas desde 1.50€ ud.</p>
           <p>Cupcakes personalizados desde 0.95€ ud.</p>
           <p>Macarrons desde 1.25€ ud.</p>
-          <h3><b>Pedido mínimo de 6 ud.</h3>
+          <h3><b>Pedido mínimo de 6 uds.</h3>
         </div>
         <!-- WAVES INFERIORES -->
         <div class="custom-shape-divider-top-1718731153 bottom-waves">
