Arreglos precios info

--- a/src/index.html
+++ b/src/index.html
@@ -476,9 +476,9 @@
             </tbody>
           </table>
           <p><b>Consultar para otros tamaños</b></p>
-          <p>Galletas personalizadas desde 1.50€ ud.</p>
-          <p>Cupcakes personalizados desde 0.95€ ud.</p>
-          <p>Macarrons desde 1.25€ ud.</p>
+          <p>Galletas personalizadas <span class="nowrap">desde 1.50€ ud.</span></p>
+          <p>Cupcakes personalizados <span class="nowrap">desde 0.95€ ud.</span></p>
+          <p>Macarrons <span class="nowrap">desde 1.25€ ud.</span></p>
           <h3><b>Pedido mínimo de 6 uds.</h3>
         </div>
         <!-- WAVES INFERIORES -->
