--- a/src/index.html
+++ b/src/index.html
@@ -507,6 +507,12 @@
           <p>Puedes contactar mediante Whastsapp o bien mediante nuestro formulario de contacto</p>
           <a id="whatsapp-link" href="#"><img src="/img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
         </div>
+        <div class="whatsapp-form-notes">
+          <p<span class="nowrap">Detalla tu consulta lo máximo posible</span>.</p>
+          <p><span class="nowrap">Indica si necesitas opción sin gluten.</span></p>
+          <p>Número de porciones.</p>
+          <p>Fecha para la que necesitas el postre. <br>Mínimo 5 días</p>
+        </div>
         <form action="https://javilonedev.es/formhandler.php" method="post" id="yullsForm">
           <div class="mb-3">
             <label for="name" class="form-label" required>Nombre</label>
@@ -527,8 +533,10 @@
               id="message"
               name="message"
               rows="7"
-              placeholder="Detalla tu consulta lo máximo posible. No olvides indicar si necesitas opción sin gluten, número de personas, fechas, etc. 
-Para opciones más detalladas entra en la página del artículo."
+              placeholder="Detalla tu consulta lo máximo posible.
+- Indica si necesitas opción sin gluten.
+- Número de porciones.
+- Fecha para la que necesitas el postre. Mínimo 5 días"
             ></textarea>
           </div>
           <div class="submitBtn">
