--- a/src/index.html
+++ b/src/index.html
@@ -505,7 +505,7 @@
       <div class="container-fluid form-container">
         <div class="form-whatsapp">
           <p>Puedes contactar mediante Whastsapp o bien mediante nuestro formulario de contacto</p>
-          <a id="whatsapp-link" href="#"><img src="/img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
+          <a id="whatsapp-link" href="#"><img src="/img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" class="heartbeat"/></a>
         </div>
         <div class="whatsapp-form-notes">
           <p<span class="nowrap">Detalla tu consulta lo máximo posible</span>.</p>
