Privacidad de datos

--- a/src/index.html
+++ b/src/index.html
@@ -443,8 +443,9 @@
       </div>
       <div class="container-fluid information">
         <div class="info-text-container">
-          <p><b>Tabla de porciones y precios</b></p>
-          <table>
+          <div>
+          <h3><b>Tabla de porciones y precios</b></h3>
+          <table class="info-table">
             <thead>
               <tr>
                 <th>Moldes</th>
@@ -476,10 +477,12 @@
             </tbody>
           </table>
           <p><b>Consultar para otros tamaños</b></p>
+        </div>
           <p>Galletas personalizadas <span class="nowrap">desde 1.50€ ud.</span></p>
           <p>Cupcakes personalizados <span class="nowrap">desde 0.95€ ud.</span></p>
           <p>Macarrons <span class="nowrap">desde 1.25€ ud.</span></p>
-          <h3><b>Pedido mínimo de 6 uds.</h3>
+          <h4><b>Pedido mínimo de 6 uds.</h4>
+            <div class="privacy-p">Puede leer la política de privacidad de datos <a href=#dataPrivacy>bajo el formulario</a></div>
         </div>
         <!-- WAVES INFERIORES -->
         <div class="custom-shape-divider-top-1718731153 bottom-waves">
@@ -544,6 +547,11 @@
           </div>
           <div id="mensaje" class=""></div>
         </form>
+        <div class="privacy-p" id="dataPrivacy">
+          <p>Cómo se tratan sus datos:</p>
+          <p>Los datos proporcionados a través del enlace de WhatsApp o del formulario serán utilizados únicamente para responder a consultas y procesar pedidos de nuestros servicios de repostería. No compartimos esta información con terceros sin su consentimiento. Si tiene preguntas sobre cómo gestionamos su información, puede contactarnos mediante
+          <a href="mailto:yullsbakery22@gmail.com">correo electrónico</a></p>
+        </div> 
       </div>
     </main>
     <!-- FOOTER -->
