Barras de desplazamiento

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
       <div class="section-title" aria-labelledby="tartas" id="tartas" role="region">
         <h1>Tartas</h1>
       </div>
-      <div class="container-fluid product-container">
+      <div class="container-fluid product-container  scrollable-div">
         <!-- ITEM 1 -->
         <div class="product-item">
           <div class="top-info">
@@ -234,7 +234,7 @@
       <div class="section-title" aria-labelledby="sweets" id="sweets" role="region">
         <h1>Dulces y galletas</h1>
       </div>
-      <div class="container-fluid product-container">
+      <div class="container-fluid product-container  scrollable-div">
         <!-- ITEM 1 -->
         <div class="product-item">
           <div class="top-info">
