Agregada tarta cumple y foto carrusel

--- a/src/index.html
+++ b/src/index.html
@@ -62,13 +62,13 @@
             <img src="./img/tartas/tartas-tematicas.jpeg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="./img/tartas/tarta-chocolate.jpeg" class="d-block w-100" alt="..." />
-          </div>
-          <div class="carousel-item">
             <img src="./img/cookies_sweets/hallowenCookies.jpeg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
             <img src="./img/cupcakes/cupcakes-colores-1.jpeg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/tartas/tarta-cumple-01.jpg" class="d-block w-100" alt="..." />
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselFade" data-bs-slide="prev">
@@ -160,14 +160,14 @@
               tabindex="0"
               data-bs-trigger="focus"
               data-bs-html="true"
-              data-bs-content="Celebra con nuestra tarta de cumpleaños, una delicia que combina pastel esponjoso y relleno cremoso. 
-              <br><br>Envuelta en una elegante crema rosa y decorada con flores delicadas, esta tarta culmina con una corona Happy Birthday en la cima. 
+              data-bs-content="Celebra con nuestra tarta de cumpleaños una delicia que combina pastel esponjoso y relleno cremoso. 
+              <br><br>Envuelta en una elegante crema y decorada con flores delicadas, esta tarta culmina con una corona de Feliz Cumpleaños en la cima. 
               Ideal para ocasiones especiales, ofrece un sabor irresistible y una presentación deslumbrante que hará que tu celebración sea inolvidable. 
               <br><br>¡Haz que cada momento cuente!"
             />
             <img src="./img/gluten-free-icon.svg" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" tabindex="0" data-bs-trigger="focus" data-bs-html="true" data-bs-content="Opción sin gluten" />
           </div>
-          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-cumpleanios.jpeg" alt="Imagen de tarta de cumpleaños" />
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-cumple-01.jpg" alt="Imagen de tarta de cumpleaños" />
           <div class="item-name">Tarta de cumpleaños</div>
           <div class="item-buy-button">
             <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn3" title="Tarta de cumpleaños">¡La quiero!</a>
