Actualización con dos tartas

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,9 @@
             <img src="./img/tartas/tarta-flores-madres.jpeg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
+            <img src="./img/tartas/tarta-alfabeto.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
             <img src="./img/tartas/tartas-tematicas.jpeg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
@@ -100,7 +103,7 @@
         <h1>Tartas</h1>
       </div>
       <div class="container-fluid product-container  scrollable-div">
-        <!-- ITEM 1 -->
+        <!-- ITEM 1 TARTA FLORAL -->
         <div class="product-item">
           <div class="top-info">
             <img
@@ -124,7 +127,7 @@
             <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn1" title="Tarta Floral">¡La quiero!</a>
           </div>
         </div>
-        <!-- ITEM 2 -->
+        <!-- ITEM 2 TARTAS TEMÁTICAS -->
         <div class="product-item">
           <div class="top-info">
             <img
@@ -149,7 +152,7 @@
             <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn2" title="Tarta temática">¡La quiero!</a>
           </div>
         </div>
-        <!-- ITEM 3 -->
+        <!-- ITEM 3 TARTA DE CUMPLEAÑOS -->
         <div class="product-item">
           <div class="top-info">
             <img
@@ -173,7 +176,7 @@
             <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn3" title="Tarta de cumpleaños">¡La quiero!</a>
           </div>
         </div>
-        <!-- ITEM 4 -->
+        <!-- ITEM 4 TARTA TEMÁTICA LETRAS -->
         <div class="product-item">
           <div class="top-info">
             <img
@@ -184,20 +187,64 @@
               tabindex="0"
               data-bs-trigger="focus"
               data-bs-html="true"
-              data-bs-content="Disfruta de esta espectacular tarta de bizcocho de chocolate de 3 pisos, una delicia para los amantes del cacao. 
-              <br><br>Cada capa está rellena con una rica crema de chocolate, que proporciona una textura suave y un sabor intenso. 
-              La tarta está coronada con moras rojas y negras, que no solo añaden un toque fresco y afrutado, sino también una presentación elegante y apetecible. 
-              <br><br>Ideal para cualquier celebración."
+              data-bs-content="Esta tarta con forma de letra es una obra de arte dulce, elaborada con delicadas capas de crujiente galleta intercaladas con suave merengue. 
+              <br>Su superficie se convierte en un festín visual y de sabores, con una decoración vibrante de frutas frescas, bombones y flores comestibles. 
+              <br><br>Cada bocado ofrece una armonía perfecta entre texturas y matices dulces y ácidos, haciendo de esta tarta personalizada el centro de atención en cualquier celebración."
+            />
+            <img src="./img/gluten-free-icon.svg" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" tabindex="0" data-bs-trigger="focus" data-bs-html="true" data-bs-content="Opción sin gluten" />
+          </div>
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-alfabeto.jpg" alt="Imagen de tarta con forma de letra" />
+          <div class="item-name">Tarta temática de letras</div>
+          <div class="item-buy-button">
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn4" title="Tarta temática de letras">¡La quiero!</a>
+          </div>
+        </div>
+        <!-- ITEM 5 TARTA MOTIVOS NUPCIALES -->
+        <div class="product-item">
+          <div class="top-info">
+            <img
+              src="./img/info-icon.svg"
+              data-bs-container="body"
+              data-bs-toggle="popover"
+              data-bs-placement="bottom"
+              tabindex="0"
+              data-bs-trigger="focus"
+              data-bs-html="true"
+              data-bs-content="Esta elegante tarta nupcial es una verdadera joya, diseñada para deslumbrar en el gran día.
+              <br>Capas cubiertas con una suave crema y decoradas con exquisitas flores naturales y detalles inspirados en el romanticismo de la ocasión. 
+              <br><br>Cada nivel refleja armonía y sofisticación con tonos sutiles. Más que un postre, es una pieza central que simboliza amor y celebración, deleitando a la vista y el paladar."
+            />
+            <img src="./img/gluten-free-icon.svg" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" tabindex="0" data-bs-trigger="focus" data-bs-html="true" data-bs-content="Opción sin gluten" />
+          </div>
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-nupcial.jpg" alt="Imagen de tarta nupcial" />
+          <div class="item-name">Tarta con motivos nupciales</div>
+          <div class="item-buy-button">
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn5" title="Tarta con motivo nupcial">¡La quiero!</a>
+          </div>
+        </div>
+        <!-- ITEM 6 TARTA CHOCOLATE 3 PISOS -->
+        <div class="product-item">
+          <div class="top-info">
+            <img
+              src="./img/info-icon.svg"
+              data-bs-container="body"
+              data-bs-toggle="popover"
+              data-bs-placement="bottom"
+              tabindex="0"
+              data-bs-trigger="focus"
+              data-bs-html="true"
+              data-bs-content="Esta tarta de tres pisos es un sueño para los fans del chocolate. Capas de esponjoso bizcocho de cacao se combinan con un merengue suave y cremoso, creando una mezcla irresistible de texturas. 
+              <br>Para rematar, un montón de moras le da un toque ácido y refrescante. Perfecta para quienes no pueden resistirse al chocolate."
             />
             <img src="./img/gluten-free-icon.svg" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" tabindex="0" data-bs-trigger="focus" data-bs-html="true" data-bs-content="Opción sin gluten" />
           </div>
           <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-chocolate.jpeg" alt="Imagen de tarta de chocolate" />
           <div class="item-name">Tarta de chocolate 3 pisos</div>
           <div class="item-buy-button">
-            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn4" title="Tarta de chocolate 3 pisos">¡La quiero!</a>
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn6" title="Tarta chocolate y moras 3 pisos">¡La quiero!</a>
           </div>
         </div>
-        <!-- ITEM 5 -->
+        <!-- ITEM 7 TARTA PERSONALIZADA -->
         <div class="product-item">
           <div class="top-info">
             <img
@@ -226,7 +273,7 @@
           />
           <div class="item-name">Tarta personalizada Infantil</div>
           <div class="item-buy-button">
-            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn5" title="Tarta personalizada Infantil">¡La quiero!</a>
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn7" title="Tarta personalizada Infantil">¡La quiero!</a>
           </div>
         </div>
       </div>
